[metadata]
name = python-pymongomodem
url = https://github.com/internap/python-pymongomodem
author = Internap
author-email = opensource@internap.com
summary = python method to deal with pymongo cringing around key with dots
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    pymongomodem

[bdist_wheel]
universal = 1

[nosetests]
no-path-adjustment = 1
logging-level = DEBUG
verbosity = 2
